@startuml
' User & User Profile ER Diagram

hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam entity {
  BackgroundColor #F8FAFC
  BorderColor #1E293B
  FontColor #0F172A
}

entity "users" as users {
  * id : uuid PK
  * email : text UNIQUE
  * username : text UNIQUE
  * password_hash : text
  * created_at : timestamptz
  * updated_at : timestamptz
  * email_verified : boolean
  * mfa_enabled : boolean
  --
  email_verified_at : timestamptz
  auth_providers : jsonb
  mfa_secret : text
}

entity "user_profiles" as user_profiles {
  * id : uuid PK
  * user_id : uuid FK
  * created_at : timestamptz
  * updated_at : timestamptz
  --
  bio : text
  avatar_url : text
  avatar_storage_key : text
  first_name : text
  last_name : text
  location : text
  website_url : text
  birth_date : date
}

entity "user_settings" as user_settings {
  * id : uuid PK
  * user_id : uuid FK
  * created_at : timestamptz
  * updated_at : timestamptz
  * preferred_units : UnitSystem
  * timezone : text
  * language : text
}

entity "privacy_settings" as privacy_settings {
  * id : uuid PK
  * user_id : uuid FK
  * created_at : timestamptz
  * updated_at : timestamptz
  * profile_visibility : Visibility
  * dive_logs_visibility : Visibility
  * media_visibility : Visibility
  * stats_visibility : Visibility
}

entity "user_certifications" as user_certifications {
  * id : uuid PK
  * user_id : uuid FK
  * certification_name : text
  * issuer : text
  * issued_date : date
  * created_at : timestamptz
  * updated_at : timestamptz
  --
  expiry_date : date
  certification_number : text
  notes : text
  verified : boolean
}

' Relationships
users ||--|| user_profiles : "1:1"
users ||--|| user_settings : "1:1"
users ||--|| privacy_settings : "1:1"
users ||--o{ user_certifications : "1:many"

note bottom of users
  **Deletion Strategy: Hard Delete with Full CASCADE**
  Deleting a user cascades to all owned data:
  - user_profiles, user_settings, privacy_settings, user_certifications
  - dive_logs, media (and related media_species_tags), scubadex_entries
    (see er_core_data.puml)
  Chosen over soft-delete for simplicity; revisit if
  social features (friends, comments) require anonymization.
end note

@enduml
